CSS overlaping fixed

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -59,6 +59,9 @@
         .fix-top{
             top:0;
         }
+        .gor-fixed-position{
+            position:fixed;
+        }
         &.audit-reconcilation {
             padding-left: 250px;
             padding-right: 250px;
